# lichess

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TZ.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 40eef8cfaadf_init.py
backend/app/: deps.py  main.py  tasks.py
backend/app/api/: __init__.py  auth.py  games.py  profile.py
backend/app/core/: auth.py  config.py  db.py  deps.py
backend/app/models/: __init__.py  models.py
backend/app/routes/: auth.py  games.py  profile.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: celery_app.py  crud.py  lichess.py
backend/tests/: test_health.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: GamesTable.tsx  Pagination.tsx  ProfileCard.tsx  games-table.css  index.ts  profile-card.css
frontend/src/constants/: index.ts
frontend/src/hooks/: index.ts  useAuth.ts  useGames.ts  useProfile.ts
frontend/src/pages/: DashboardPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: app.css
frontend/src/types/: index.ts
frontend/src/utils/: date.ts  index.ts
